--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "rick2017.mint@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "discord.js": "13.14.0",
     "express": "^4.18.2",
     "node-fetch": "2.6.7",
+    "puppeteer": "^20.8.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-capsolver": "1.0.2",
     "ws": "^8.13.0"
   }
 }
