--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "discord.js": "13.14.0",
     "express": "^4.18.2",
+    "formidable": "^3.5.0",
     "node-fetch": "2.6.7",
     "puppeteer": "^20.8.2",
     "puppeteer-extra": "^3.3.6",
